css/custom.css
@import url('http://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css');
body {
    padding-top:50px;
    background-color:#FEFCFB;
    font-size:1.5em;
    font-family:font-family: embrya,sans-serif;
    font-weight:200;
    margin-bottom:30px;
}

html {
    position:relative;
    min-height:100%
}

#map-canvas {
	width:500px;
	height:400px;
	background-color: #CCC;
}

/* Navigation Bar */
.navbar-nav{
	float: right;
}

.navbar-inverse {
    background-color: white;
}

.navbar-inverse .navbar-nav > li > a {
    color: #2B3E85;
    font-size: 1.6em;
}

.navbar-inverse .navbar-brand {
    color: #2B3E85;
    font-size: 1.6em;
    margin-top: -10px;
}

.fbook {
	padding-top:6px !important;
  margin-top: 0px;
  padding-right: 1px !important;
}

.lclub {
  padding-top:6px !important;
  margin-top: 0px;
  padding-right: 1px !important;
  float: left;
  height: 37px;
  width: auto;
}

.twitter {
	padding-top:7px !important;
  margin-top: 0px;
  padding-right: 0px !important;
}

.navbar-nav >li > a:focus, .navbar-inverse .navbar-nav>li>a:hover {
	background-color:transparent !important;
	color: #2B3E85 !important;
}

.navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse {
    max-height: 400px;
}


/* Navigation Bar Hover Animation */
.sliding-middle-out {
	display: inline-block;
	position: relative;
	padding-bottom: 3px;
}

.sliding-middle-out:after {
	content: '';
	display: block;
	margin: auto;
	height: 3px;
	width: 0px;
	background: transparent;
	transition: width .5s ease, background-color .5s ease;
}

.sliding-middle-out:hover:after {
	width: 100%;
	background: #2B3E85;
}


@media screen and (max-width: 767px) {
  .navbar-nav {
    float:left;
  	text-align: left;
  }

  .navbar-inverse .navbar-nav > li > a {
      color: #2B3E85;
      font-size: 3em;
      margin-top: 30px;
  }

  .fbook {
  	padding-top:6px !important;
    margin-top: 0px;
    padding-right: 1px !important;
    float: left;
  }

  .twitter {
  	padding-top:7px !important;
    margin-top: 0px;
    padding-right: 0px !important;
    float: left;
  }
}



.navbar-toggle {
    margin-top: 12px;
    margin-bottom: 15px;
    border: none;
    background-color: transparent !important;
    padding: 0px;
}



.dropdown .dropdown-menu{
  display: inline-block;
  visibility: hidden;
  opacity:0;
  -webkit-transition: all 200ms ease-in;
  -moz-transition: all 200ms ease-in;
  -ms-transition: all 200ms ease-in;
  -o-transition: all 200ms ease-in;
  transition: all 200ms ease-in;
}

.dropdown:hover .dropdown-menu{  /*Hover Dropwdown menu*/
  visibility: visible;
  display: block;
  opacity: 1;
 }

 #image {
   width: 100%;
 }

.footer {
	position: absolute;
	bottom: 0;
	width: 100%;
	/* Set the fixed height of the footer here */
	height: 80px;
	background-color:#FFFFFF;
	border-top: 2px solid #CCC;
	text-align: center;
	font-weight: 200;
	width: 100%;
}

.carousel-control.left, .carousel-control.right {
	background: none !important;
	filter: progid: none !important;
	outline: 0;
 }

.carousel .carousel-control {
	visibility: hidden;
}

.carousel:hover .carousel-control {
	visibility: visible;
}

.small-footer {
	text-align: center;
	font-size: 1em;
	font-weight: 200;
	width: 100%;
	background-color: #FFFFFF !important;
}

#email_validation, #name_validation {
    display:none;
}

label.required:after {
	content:'*';
	color:red;
}

span.error {
  background-color:#FFDFDF;
  color:red;
}

/* Flexible iFrame */

.Flexible-container {
  position: relative;
  padding-bottom: 56.25%;
  padding-top: 30px;
  height: 0;
  overflow: hidden;
}

.Flexible-container iframe,
.Flexible-container object,
.Flexible-container embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.videowrapper {
  float: none;
  clear: both;
  width: 100%;
  position: relative;
  padding-bottom: 56.25%;
  padding-top: 25px;
  height: 0;
}
.videowrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.buildn {
  text-align: right;
  font-size:1em;
  color: rgb(192,192,192);
  margin-right: 10px;

}

a.dropdown-toggle.navcol {
  color: #2B3E85 !important ;
}

.navcol:hover {
  background-color: #eee;
}

li.dropdown:hover {
  background-color: #eee;
}

.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover {
  background-color: #eee;
}

@media (max-width: 767px) {
  .navbar-nav .open .dropdown-menu {
    background-color: #fff;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    line-height: 1.42857143;
    color: #333 !important;
    position: absolute;
    top: 100%;
    left: 0;
    z-index: 1000;
    display: none;
    float: left;
    min-width: 160px;
    padding: 5px 0;
    margin: 2px 0 0;
    font-size: 14px;
    text-align: left;
    list-style: none;
    background-color: #fff;
    -webkit-background-clip: padding-box;
    background-clip: padding-box;
    border: 1px solid #ccc;
    border: 1px solid rgba(0,0,0,.15);
    border-radius: 4px;
    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
    box-shadow: 0 6px 12px rgba(0,0,0,.175);
  }
}

.headers {
  color: #21409A;
}

h3, h4 {
  display: inline;
}

.thanks {
  text-align: center;
  margin-top: 10%;
}

.list {
  font-size: 1.1em;
}

.btn  {
  margin-top: 0.5%;
}

.togglebox {
  width: 800px;
  margin: 0 auto;
  background: #fff;
  transform: translateZ(0);
  box-shadow: 0 1px 1px rgba(0,0,0,.1);
}

input[type="radio"] {
  position: absolute;
  opacity: 0;
}

.label2 {
  position: relative;
  display: block;
  height: 50px;
  line-height: 50px;
  padding: 0 20px;
  font-size: 14px;
  font-weight: 700;
  border-top: 1px solid #ddd;
  background: #fff;
  cursor: pointer;
}

.panel-group {
  padding-left: 0px;
}

.panel {
  background-color: #f5f5f5;
}

.panel-body {
  background-color: white;
}

.expand-arrow {
  float: right;
}

.rules {
  font-size:1.3em;
}

/* Button Animation */
.btn1, .btn2 {
  position: relative;
  font-family: helvetica;
  font-size: inherit;
  color: inherit;
  background: none;
  cursor: pointer;
  padding: 25px 80px;
  display: inline-block;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-weight: 700;
  outline: none;
  position: relative;
  background: #2b3e85; /* Background Color*/
  border: 1px solid #2b3e85; /* Border Color*/
  color: #edac1a; /* Text Color*/
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  transition: all 0.5s;
  text-align: center;
}

.btn1:hover {
  background: #edac1a; /* Background Color*/
  color: #2b3e85; /* Text Color*/
  border: 1px solid #edac1a; /* Border Color*/
}

.horizbar {
  background: #edac1a;
  z-index: -10;
  width: 100%;
  height: 30px;
  margin-bottom: 20px;
  margin-top: -75px;
}

.sponsors {
  text-align: center;
  margin-top: 1%;
}

.indexSponsor {
  margin: 2%;
  width: 150px;
  height: auto;
}

.indexTitleSponsor {
  margin: 2%;
  width: 250px;
  height: auto;
}

.btn-center {
  text-align: center;
  margin-bottom: 5%;
}

.sponsorBar {
  position: relative;
  bottom: 0px;
  left: 0px;
  width: 100%;
  text-align: center;
}

.sponsorBarResults {
  position: absolute;
  bottom:90px;
  left: 0px;
  width: 100%;
  text-align: center;
}

.sponsorBarImg {
  margin: 1%;
  width: 75px;
  height: auto;
  opacity: 0.50;
  -webkit-transition: 0.3s;
  -moz-transition: 0.3s;
  -ms-transition: 0.3s;
  transition: 0.3s;
}

.sponsorBarImg:hover {
  opacity: 1.0;
}

.center {
  text-align: center;
  margin-left: auto;
  margin-right: auto;
}

.prizeHeaderImg {
  width: 100%;
  height: auto;
}

.carousel1 {
    background: #2f4357;
    margin-top: 20px;
}

.carousel1 .item img {
    margin: 0 auto; /* Align slide image horizontally center */
}

.bs-example1 {
	margin: 20px;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  height: auto;
}

